source code v0.0 7.19 PlayerAndBoomImpact Props almostFinished Grass almost almost almost

--- a/src/com/game/text/data/GameData.config
+++ b/src/com/game/text/data/GameData.config
@@ -1,7 +1,7 @@
 play = src/res/image/Characters/Done_body16001_walk.png
 play2 = src/res/image/Characters/Done_body51001_walk.png
 floor = src/res/image/Characters/map.png
-FLOOR = src/res/image/Characters/floor.png
+Floor = src/res/image/Characters/floor.png
 box = src/res/image/Characters/boxs.png
 boom = src/res/image/Characters/boom.png
 boomPiece = src/res/image/boomScript.png
